add xtionpro_sensor_interface folder.

--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,22 @@
 *.o
 *.obj
 
+
 # Precompiled Headers
 *.gch
 *.pch
+
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
 
+
 # Fortran module files
 *.mod
 *.smod
+
 
 # Compiled Static libraries
 *.lai
@@ -23,7 +27,13 @@
 *.a
 *.lib
 
+
 # Executables
 *.exe
 *.out
 *.app
+
+
+# Exception folders
+xtionpro_sensor_interface/build/
+xtionpro_sensor_save_images/build/
